CORE-5328: Fixing Left alignment of promo discount percentage on cart page issue.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/checkout/_basket.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/checkout/_basket.scss
@@ -106,16 +106,6 @@
               text-decoration: underline;
             }
           }
-
-          &.price {
-            .price--discount {
-              .discount-prefix {
-                @include breakpoint($tablet) {
-                  margin-right: 1.125rem;
-                }
-              }
-            }
-          }
         }
 
         &:last-child {
